--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/morganherlocker/clipsy-geojson/issues"
+  },
+  "dependencies": {
+    "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "should": "~3.1.2",
   }
 }
