--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "lodash": "~2.4.1"
   },
-  "devDependencies": {
-    "should": "~3.1.2"
-  }
+  "devDependencies": [
+    "mocha",
+    "should"
+  ]
 }
